# appic

./: Dockerfile  README.md  compose.yml  pyproject.toml
appic/: db.sqlite3  manage.py
appic/api/: admin.py  models.py  serializers.py  urls.py  views.py
appic/api/migrations/: 0001_initial.py
appic/api/tests/: test_view.py
appic/appic/: asgi.py  settings.py  urls.py  wsgi.py
